# star-battle

./: LICENSE  README.md  stack.yaml  star-battle.cabal  starbattle.cabal
app/: Main.hs
examples/: changing_rooms.csv  changing_rooms.txt  zoltan_horvath.csv  zoltan_horvath.txt
prolog/: README.md  star-battle.pl
src/: ParseMatrix.hs  StarBattle.hs
test/: StarBattleSpec.hs
