name:                star-battle
version:             0.1.0.0
synopsis:            A solver for the puzzle Star Battle.
description:         Please see README.md
homepage:            https://github.com/mmachenry/star-battle#readme
license:             MIT
license-file:        LICENSE
author:              Mike MacHenry
maintainer:          mike.machenry@gmail.com
copyright:           2017 Mike MacHenry
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     StarBattle
                     , ParseMatrix
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cassava
                     , fd
                     , matrix
                     , vector
  default-language:    Haskell2010

executable star-battle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , star-battle
  default-language:    Haskell2010

test-suite star-battle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , matrix
                     , star-battle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmachenry/star-battle

