name:                starbattle
version:             0.1.0.0
synopsis:            A solver for the puzzle Battle Stars.
description:         Please see README.md
homepage:            https://github.com/mmachenry/starbattle#readme
license:             MIT
license-file:        LICENSE
author:              Mike MacHenry
maintainer:          mike.machenry@gmail.com
copyright:           2017 Mike MacHenry
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     StarBattle
  build-depends:       base >= 4.7 && < 5,
                       fd,
                       containers
  default-language:    Haskell2010

executable starbattle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , starbattle
  default-language:    Haskell2010

test-suite starbattle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , starbattle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mmachenry/starbattle
